Single course page spacing fixes

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -187,7 +187,7 @@ ul {
 	.col-8,
 	.col-4 {
 		width: 100%;
-		flex: 0 0 100%;
+		flex: 1 1 100%;
 		max-width: 100%;
 	}
 }
